[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "us-weather-mcp"
version = "1.0.0"
description = "Real-time US weather checking MCP server"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "YourName", email = "your.email@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/us-weather-mcp"
Repository = "https://github.com/yourusername/us-weather-mcp"

[tool.setuptools]
py-modules = ["weather_server"]